<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".RegisterFragment">


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilName"
        style="@style/TextInputLayoutDefault"
        android:layout_margin="@dimen/twenty_dp"
        android:hint="@string/textInputName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tietName"
            style="@style/EditTextDefault"
            android:inputType="textPersonName"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilEmail"
        style="@style/TextInputLayoutDefault"
        android:hint="@string/textInputEmail"
        app:layout_constraintStart_toStartOf="@+id/tilName"
        app:layout_constraintTop_toBottomOf="@id/tilName"
        app:layout_constraintEnd_toEndOf="@id/tilName"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tietEmail"
            style="@style/EditTextDefault"
            android:inputType="textEmailAddress"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilPhone"
        style="@style/TextInputLayoutDefault"
        android:hint="@string/textInputPhone"
        app:layout_constraintStart_toStartOf="@id/tilName"
        app:layout_constraintTop_toBottomOf="@id/tilEmail"
        app:layout_constraintEnd_toEndOf="@id/tilName">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tietPhone"
            style="@style/EditTextDefault"
            android:inputType="number"
            />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilPassword"
        style="@style/TextInputLayoutDefault"
        android:hint="@string/textInputPassword"
        app:layout_constraintStart_toStartOf="@id/tilName"
        app:layout_constraintTop_toBottomOf="@id/tilPhone"
        app:layout_constraintEnd_toEndOf="@id/tilName">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tietPassword"
            style="@style/EditTextDefault"
            android:inputType="textPassword"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilConfirmPassword"
        style="@style/TextInputLayoutDefault"
        android:hint="@string/textInputConfirmPassword"
        app:layout_constraintStart_toStartOf="@id/tilName"
        app:layout_constraintTop_toBottomOf="@id/tilPassword"
        app:layout_constraintEnd_toEndOf="@id/tilName">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tietConfirmPassword"
            style="@style/EditTextDefault"
            android:inputType="textPassword"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btRegisterUser"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/buttonDefault"
        android:layout_marginBottom="@dimen/fifteen_dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/registerButton"
        />

</androidx.constraintlayout.widget.ConstraintLayout>